[color-swatch] Fix issue with styles in dark mode (#199)

--- a/src/color-swatch/color-swatch.css
+++ b/src/color-swatch/color-swatch.css
@@ -101,7 +101,7 @@ slot {
 
 	&.static {
 		&:is(:host([size="large"]) *) {
-			background: white;
+			background: canvas;
 		}
 	}
 
